--- a/Chess/app/src/main/res/values/colors.xml
+++ b/Chess/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
-    
+    <color name="colorBoardBrown">#d18b47</color>
+    <color name="colorBoardWhite">#ffce9e</color>
 </resources>
