--- a/Chess/app/src/main/res/values/colors.xml
+++ b/Chess/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#855435</color>
+    <color name="colorPrimaryDark">#743C18</color>
+    <color name="colorAccent">#d18b47</color>
 
     <color name="colorBoardBrown">#d18b47</color>
     <color name="colorBoardWhite">#ffce9e</color>
