--- a/Chess/app/src/main/res/layout/fragment_board.xml
+++ b/Chess/app/src/main/res/layout/fragment_board.xml
@@ -29,12 +29,15 @@
                     android:gravity="center"
                     android:text="@string/app_title"
                     android:textColor="@color/colorBackground"
-                    android:textSize="28sp" />
+                    android:textSize="28dip" />
 
                 <ImageView
                     android:id="@+id/board_image_back"
-                    android:layout_width="60dp"
+                    android:layout_width="40dp"
                     android:layout_height="match_parent"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginStart="10dp"
                     android:src="@drawable/ic_arrow_left"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
