--- a/Chess/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Chess/app/src/main/res/layout/fragment_main_menu.xml
@@ -30,7 +30,7 @@
             android:text="@string/app_name"
             android:fontFamily="@font/dustismo_bold"
             android:gravity="center"
-            android:textSize="50sp"/>
+            android:textSize="50dip"/>
 
         <View
             android:id="@+id/view2"
@@ -53,7 +53,7 @@
             app:layout_constraintWidth_percent="0.78"
             android:background="@drawable/button_secondary"
             android:textColor="@color/colorBackground"
-            android:textSize="24sp"
+            android:textSize="@dimen/button_text_size"
             android:textAllCaps="false"/>
 
 
