--- a/Chess/app/src/main/res/values/dimens.xml
+++ b/Chess/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <dimen name="button_corner_radius">16dp</dimen>
-    <dimen name="board_text_size">8sp</dimen>
+    <dimen name="board_text_size">10dip</dimen>
+    <dimen name="button_text_size">24dip</dimen>
 
 </resources>
