--- a/Chess/app/src/main/res/layout/fragment_board.xml
+++ b/Chess/app/src/main/res/layout/fragment_board.xml
@@ -96,6 +96,14 @@
                             android:layout_height="match_parent"
                             android:layout_margin="2dp" />
 
+                        <ImageView
+                            android:id="@+id/board_move_0_0"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_margin="2dp"
+                            android:src="@drawable/ic_move"
+                            />
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </LinearLayout>
