--- a/Chess/app/src/main/res/values/dimens.xml
+++ b/Chess/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
 
     <dimen name="button_corner_radius">16dp</dimen>
     <dimen name="board_text_size">10dip</dimen>
-    <dimen name="button_text_size">24dip</dimen>
+    <dimen name="button_text_size">24sp</dimen>
+
 
 </resources>
