--- a/Chess/app/src/main/res/layout/fragment_board.xml
+++ b/Chess/app/src/main/res/layout/fragment_board.xml
@@ -66,8 +66,18 @@
             app:layout_constraintHeight_percent="0.125"
             app:layout_constraintTop_toBottomOf="@id/cardView" />
 
+        <TextView
+            android:id="@+id/blackTimeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@id/boardLayout"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <LinearLayout
+            android:id="@+id/boardLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
@@ -2066,6 +2076,8 @@
 
         </LinearLayout>
 
+
+
         <LinearLayout
             android:id="@+id/board_choose_layout"
             android:layout_width="0dp"
@@ -2145,6 +2157,16 @@
         <!--            android:text="BLACK WINS"-->
         <!--            android:textSize="60dip"-->
         <!--            />-->
+
+        <TextView
+            android:id="@+id/whiteTimeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginTop="4dp"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@id/boardLayout"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/winTextView"
